location api and user update
