# app/Http/Controllers/API/Version1/LoginAPIController.php
@@ -7,12 +7,13 @@ use Illuminate\Http\Request;
 
 
 // use Intervention\Image\Facades\Image;
+use Illuminate\Validation\Rule;
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Hash;
-use Illuminate\Support\Facades\Validator;
-use Illuminate\Http\Exceptions\HttpResponseException;
 use Intervention\Image\ImageManager;
+use Illuminate\Support\Facades\Validator;
 use Intervention\Image\Drivers\Gd\Driver;
+use Illuminate\Http\Exceptions\HttpResponseException;
 
 
 
@@ -54,12 +55,13 @@ class LoginAPIController extends Controller
      *             @OA\Property(property="name", type="string", example=""),
      *             @OA\Property(property="email", type="email", example="example@gmail.com"),
      *             @OA\Property(property="password", type="password", example=""),
-     *             @OA\Property(property="confirm_password", type="password", example=""),
+     *             @OA\Property(property="password_confirmation", type="password", example=""),
      *             @OA\Property(property="type", type="string", example="Staff"),
      *             @OA\Property(property="father_name", type="string", example=""),
-     *             @OA\Property(property="phone", type="string", example=""),
+     *             @OA\Property(property="phno", type="string", example=""),
      *             @OA\Property(property="address", type="string", example=""),
      *             @OA\Property(property="social_media", type="string", example=""),
+     *            @OA\Property(property="location", type="integer", example="1"),
      *         )
      *     ),
      *     @OA\Response(
@@ -74,6 +76,7 @@ class LoginAPIController extends Controller
      */
     public function user_register(Request $request)
     {
+        try {
         // Validate the request data
         $validated = $request->validate([
             'account_id' => 'required',
@@ -89,8 +92,9 @@ class LoginAPIController extends Controller
             'phno' => 'nullable|string|max:20',
             'address' => 'nullable|string|max:500',
             'social_media' => 'nullable|string|max:100',
+                'location' => 'nullable|integer',
 
-        ]);
+            ]);
         // dd( $validated);
         $manager = new ImageManager(new Driver());
         $photos = [];
@@ -134,19 +138,189 @@ class LoginAPIController extends Controller
             'phno' => $validated['phno'] ?? null,
             'address' => $validated['address'] ?? null,
             'social_media' => $validated['social_media'] ?? null,
-        ]);
-        // $size = filesize($path);
+                'location' => $validated['location'] ?? null,
+            ]);
+            // $size = filesize($path);
 
-        // $sizeKB = $size / 1024;
-        // $sizeMB = $size / (1024 * 1024);
+            // $sizeKB = $size / 1024;
+            // $sizeMB = $size / (1024 * 1024);
 
-        return response()->json([
-            'message' => 'User registered successfully',
-            'user' => $user,
-            // 'image_size' => ['size_bytes' => $size, 'size_kb' => $sizeKB, 'size_mb' => $sizeMB],
-        ], 201);
-
+            return response()->json([
+                'message' => 'User registered successfully',
+                'user' => $user,
+                // 'image_size' => ['size_bytes' => $size, 'size_kb' => $sizeKB, 'size_mb' => $sizeMB],
+            ], 201);
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            return response()->json(['errors' => $e->errors()], 422);
+        }
     }
+
+    /**
+     * @OA\Put(
+     *     path="/api/v1/user_update/{id}",
+     *     summary="Update a user",
+     *     tags={"User"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the user to update",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             required={"account_id","name", "email", "password", "type","confirm_password","father_name","phone","address"},
+     *             @OA\Property(property="account_id", type="string", example=""),
+     *             @OA\Property(property="name", type="string", example=""),
+     *             @OA\Property(property="email", type="email", example="example@gmail.com"),
+     *             @OA\Property(property="password", type="password", example=""),
+     *             @OA\Property(property="password_confirmation", type="password", example=""),
+     *             @OA\Property(property="type", type="string", example="Staff"),
+     *             @OA\Property(property="father_name", type="string", example=""),
+     *             @OA\Property(property="phno", type="string", example=""),
+     *             @OA\Property(property="address", type="string", example=""),
+     *             @OA\Property(property="social_media", type="string", example=""),
+     *            @OA\Property(property="location", type="integer", example="1"),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="User updated successfully"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User not found"
+     *     )
+     * )
+     */
+
+
+
+    public function update(Request $request, $id)
+
+    {
+        $user = User::find($id);
+        if (!$user) {
+            return response()->json(['message' => 'User not found'], 404);
+        }
+        try {
+            $validated = $request->validate([
+                'account_id' => 'required',
+                'type' => 'required|string',
+                'profile_photo1' => 'nullable|image|mimes:jpg,jpeg,png',
+                'profile_photo2' => 'nullable|image|mimes:jpg,jpeg,png',
+                'profile_photo3' => 'nullable|image|mimes:jpg,jpeg,png',
+                'profile_photo4' => 'nullable|image|mimes:jpg,jpeg,png',
+                'name' => 'required|string|max:255',
+                'email' => [
+                    'required',
+                    'email',
+                    Rule::unique('users', 'email')->ignore($id),
+                ],
+                'password' => 'required|string|min:6|confirmed',
+                'father_name' => 'nullable|string|max:255',
+                'phno' => 'nullable|string|max:20',
+                'address' => 'nullable|string|max:500',
+                'social_media' => 'nullable|string|max:100',
+                'location' => 'nullable|integer',
+
+            ]);
+            $manager = new ImageManager(new Driver());
+            $photos = [];
+
+            foreach (['profile_photo1', 'profile_photo2', 'profile_photo3', 'profile_photo4'] as $photoField) {
+                if ($request->hasFile($photoField)) {
+                    $file = $request->file($photoField);
+                    $filename = time() . '_' . $photoField . '.' . $file->getClientOriginalExtension();
+                    $directory = public_path('images/profiles/');
+
+                    if (!file_exists($directory)) {
+                        mkdir($directory, 0777, true);
+                    }
+
+                    $path = $directory . $filename;
+                    $manager->read($file)
+                        ->scale(width: 400) // auto maintains aspect ratio
+                        ->resize(400, 400, function ($constraint) {
+                            $constraint->aspectRatio();
+                            $constraint->upsize();
+                        })
+                        ->save($path, quality: 75);
+
+                    $photos[$photoField] =  $filename;
+                } else {
+                    $photos[$photoField] = null;
+                }
+            }
+
+            $user->update([
+                'account_id' => $validated['account_id'],
+                'type' => $validated['type'],
+                'profile_photo1' => $photos['profile_photo1'],
+                'profile_photo2' => $photos['profile_photo2'],
+                'profile_photo3' => $photos['profile_photo3'],
+                'profile_photo4' => $photos['profile_photo4'],
+                'name' => $validated['name'],
+                'email' => $validated['email'],
+                'password' => Hash::make($validated['password']),
+                'father_name' => $validated['father_name'] ?? null,
+                'phno' => $validated['phno'] ?? null,
+                'address' => $validated['address'] ?? null,
+                'social_media' => $validated['social_media'] ?? null,
+                'location' => $validated['location'] ?? null,
+            ]);
+            // $size = filesize($path);
+
+            // $sizeKB = $size / 1024;
+            // $sizeMB = $size / (1024 * 1024);
+
+            return response()->json([
+                'message' => 'User updated successfully',
+                'user' => $user,
+                // 'image_size' => ['size_bytes' => $size, 'size_kb' => $sizeKB, 'size_mb' => $sizeMB],
+            ], 201);
+        } catch (\Illuminate\Validation\ValidationException $e) {
+            return response()->json(['errors' => $e->errors()], 422);
+        }
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/v1/user_destroy/{id}",
+     *     summary="Delete a user",
+     *     tags={"User"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the user to delete",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="User deleted successfully"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User not found"
+     *     )
+     * )
+     */
+
+    public function  destroy($id)
+    {
+        $user = User::find($id);
+        if (!$user) {
+            return response()->json(['message' => 'User not found'], 404);
+        }
+
+        $user->delete();
+
+        return response()->json(['message' => 'User deleted successfully', 'id' => $id]);
+    }
+
     /**
      * @OA\Post(
      *     path="/api/v1/user_login",
@@ -209,5 +383,36 @@ class LoginAPIController extends Controller
                 'message' => 'Login Failed. Invalid email or password.',
             ], 401);
         }
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/v1/user_show/{id}",
+     *     summary="Retrieve a specific user",
+     *     tags={"User"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the user to retrieve",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="User retrieved successfully"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User not found"
+     *     )
+     * )
+     */
+    public function show($id)
+    {
+        $user = User::find($id);
+        if (!$user) {
+            return response()->json(['message' => 'User not found'], 404);
+        }
+        return response()->json(['message' => 'User retrieved successfully', 'user' => $user]);
     }
 }
